balance error handled

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
                    <h4 class="fs-5">Income</h4>
                    Income 
                    <input class="m-1" name="" id="income-input" width=40 ></input><br>
+                   <h4 id="income-error" class="error-warning fs-6">You do not have enough balance</h4>
                 <h4 class="fs-5">Expenses</h4>
                 Food
                    <input class="m-1" name="" id="food-input" cols="40" rows="1"></input><br>
@@ -30,11 +31,11 @@
                    Clothes
                    <input class="m-1" name="" id="clothes-input" cols="40" rows="1"></input><br>
                    <button id="calculate-btn" class="m-2 px-4 btn btn-success">Calculate</button>
-                   <h4 class="error-warning fs-6">Please enter a valid input</h4>
-                   <h4 class="fs-5">Total Expenses: <span id="total-cost">5500</span></h4>
-                   <h4 class="fs-5">Balance: <span id="balance-amount">4500</span></h4>
+                   <h4 id="balance-error" class="error-warning fs-6">Please enter a valid input</h4>
+                   <h4 class="fs-5">Total Expenses: <span id="total-cost">0</span></h4>
+                   <h4 class="fs-5">Balance: <span id="balance-amount">0</span></h4>
                    Save <input type="text"> % <button class="m-2 px-4 btn btn-success">save</button>
-                   <h4 class="error-warning fs-6">Please enter a valid input</h4>
+                   <h4 id="" class="error-warning fs-6">Please enter a valid input</h4>
                    <h4 class="fs-5">Saving Amount: 2000</h4>
                    <h4 class="fs-5">Remaining Balance: 2000</h44 btn btn-success
                </div>
