remaining balance error handled

--- a/index.html
+++ b/index.html
@@ -32,12 +32,12 @@
                    <input class="m-1" name="" id="clothes-input" cols="40" rows="1"></input><br>
                    <button id="calculate-btn" class="m-2 px-4 btn btn-success">Calculate</button>
                    <h4 id="balance-error" class="error-warning fs-6">Please enter a valid input</h4>
-                   <h4 class="fs-5">Total Expenses: <span id="total-cost">0</span></h4>
-                   <h4 class="fs-5">Balance: <span id="balance-amount">0</span></h4>
+                   <h4 class="fs-6">Total Expenses: <span id="total-cost">0</span></h4>
+                   <h4 class="fs-6">Balance: <span id="balance-amount">0</span></h4>
                    Save <input id="save-input" type="text"> % <button id="save-btn" class="m-2 px-4 btn btn-success">save</button>
                    <h4 id="saving-error" class="error-warning fs-6">You do not have enough balance to save!</h4>
-                   <h4 class="fs-5">Saving Amount: <span id="save-total">0</span></h4>
-                   <h4 class="fs-5">Remaining Balance: 2000</h44 btn btn-success
+                   <h4 class="fs-6">Saving Amount: <span id="save-total">0</span></h4>
+                   <h4 class="fs-6">Remaining Balance: <span id="remain-input">0</span></h44 btn btn-success
                </div>
                
            </div>
