--- a/index.html
+++ b/index.html
@@ -9,35 +9,37 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 <body>
+    <!------------------------------------------- page title added --------------------->
    <header>
     <h1 class="page-title">Cash Management</h1>
    </header>
    <main>
-       <div class="container">
+       <div class="container mt-5">
            <div class="row">
+               <!-- ---------------------------------------------------left image added ---------------------------------->
                <div class="col-md-6 mx-auto">
                    <img class="money-image" src="./images/piggy.jpg" alt="">
                </div>
+               <!--------------------------------------------------------- input form added----------- -->
                <div class="col-md-6 align-items-end">
-                   <h4 class="fs-5">Income</h4>
+                   <h4 class="fs-5 text-success fw-bold">Income</h4>
                    Income 
-                   <input class="m-1" name="" id="income-input" width=40 ></input><br>
+                   <input class="ms-2 mb-1" name="" id="income-input" width=40 ></input><br>
                    <h4 id="income-error" class="error-warning fs-6">You do not have enough balance</h4>
-                <h4 class="fs-5">Expenses</h4>
+                <h4 class="fs-5 text-success fw-bold">Expenses</h4>
                 Food
-                   <input class="m-1" name="" id="food-input" cols="40" rows="1"></input><br>
-                   Rent
-                   <input class="m-1" name="" id="rent-input" cols="40" rows="1"></input><br>
+                   <input class="ms-3 mb-2" name="" id="food-input" cols="40" rows="1"></input><br>
+                   Rent<input class="ms-4 mb-2" name="" id="rent-input" cols="40" rows="1"></input><br>
                    Clothes
-                   <input class="m-1" name="" id="clothes-input" cols="40" rows="1"></input><br>
+                   <input class="mb-2" name="" id="clothes-input" cols="40" rows="1"></input><br>
                    <button id="calculate-btn" class="m-2 px-4 btn btn-success">Calculate</button>
                    <h4 id="balance-error" class="error-warning fs-6">Please enter a valid input</h4>
-                   <h4 class="fs-6">Total Expenses: <span id="total-cost">0</span></h4>
-                   <h4 class="fs-6">Balance: <span id="balance-amount">0</span></h4>
+                   <h4 class="fs-6 fw-bold">Total Expenses: <span  id="total-cost">0</span></h4>
+                   <h4 class="fs-6 fw-bold">Balance: <span id="balance-amount">0</span></h4>
                    Save <input id="save-input" type="text"> % <button id="save-btn" class="m-2 px-4 btn btn-success">save</button>
                    <h4 id="saving-error" class="error-warning fs-6">You do not have enough balance to save!</h4>
-                   <h4 class="fs-6">Saving Amount: <span id="save-total">0</span></h4>
-                   <h4 class="fs-6">Remaining Balance: <span id="remain-input">0</span></h44 btn btn-success
+                   <h4 class="fs-6 fw-bold">Saving Amount: <span id="save-total">0</span></h4>
+                   <h4 class="fs-6 fw-bold">Remaining Balance: <span  id="remain-input">0</span></h44 btn btn-success
                </div>
                
            </div>
