title-margin added

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <!------------------------------------------- page title added --------------------->
    <header>
-    <h1 class="page-title d-block text-center">Cash Management</h1>
+    <h1 class="page-title d-block text-center mt-2">Cash Management</h1>
    </header>
    <main>
        <div class="container mt-5">
